--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                     <div class="form-group">
                         <!-- <label for="exampleInputEmail1">Title</label> -->
                         <input type="text" class="form-control" id="addTitle" aria-describedby="title"
-                            placeholder="add a title to your note">
+                            placeholder="Add a title to your note">
                     </div>
                     <textarea class="form-control" id="addTxt" rows="3" placeholder="write your note here"></textarea>
                 </div>
-                <button class="btn btn-primary" id="addBtn">Add note</button>
+                <button class="btn btn-primary" id="addBtn">Add note here :)</button>
             </div>
         </div>
         <hr>
